# autd3-freq-shift-old

./: .gitignore  .gitmodules  NOTICE  README.md  annotated.html  autd3-freq-shift-fpga.xpr  autd3-freq-shift_8hpp.html  autd3-freq-shift_8hpp__incl.map  autd3-freq-shift_8hpp__incl.md5  autd3-freq-shift_8hpp_source.html  autd3-slim-fpga.xpr  autd3_8hpp.html  autd3_8hpp__incl.map  autd3_8hpp__incl.md5  autd3_8hpp_source.html  autd__types_8hpp.html  autd__types_8hpp__dep__incl.map  autd__types_8hpp__dep__incl.md5  autd__types_8hpp_source.html  classautd_1_1Controller-members.html  classautd_1_1Controller.html  classautd_1_1Controller_a170448cf98c2dc7497aa69bfc31b2a72_cgraph.map  classautd_1_1Controller_a170448cf98c2dc7497aa69bfc31b2a72_cgraph.md5  classautd_1_1Controller_a170448cf98c2dc7497aa69bfc31b2a72_icgraph.map  classautd_1_1Controller_a170448cf98c2dc7497aa69bfc31b2a72_icgraph.md5  classautd_1_1Controller_a235d54abde6a96c9b895f32e7c37db8e_cgraph.map  classautd_1_1Controller_a235d54abde6a96c9b895f32e7c37db8e_cgraph.md5  classautd_1_1Controller_a23ae9f33781c7aef3f7f1819a2161e29_cgraph.map  classautd_1_1Controller_a23ae9f33781c7aef3f7f1819a2161e29_cgraph.md5  classautd_1_1Controller_a3bd7289712a726a5e9fc40067d6a2b81_cgraph.map  classautd_1_1Controller_a3bd7289712a726a5e9fc40067d6a2b81_cgraph.md5  classautd_1_1Controller_a6e62e84ca5f36a9fdcf0c7b6ee8be96f_cgraph.map  classautd_1_1Controller_a6e62e84ca5f36a9fdcf0c7b6ee8be96f_cgraph.md5  classautd_1_1Controller_a6e62e84ca5f36a9fdcf0c7b6ee8be96f_icgraph.map  classautd_1_1Controller_a6e62e84ca5f36a9fdcf0c7b6ee8be96f_icgraph.md5  classautd_1_1Controller_a84f23827df6b20a878533ff9519936cb_cgraph.map  classautd_1_1Controller_a84f23827df6b20a878533ff9519936cb_cgraph.md5  classautd_1_1Controller_a8a90ce7f1cdb6a18b2ac9fcf55dbb977_icgraph.map  classautd_1_1Controller_a8a90ce7f1cdb6a18b2ac9fcf55dbb977_icgraph.md5  classautd_1_1Controller_aa0aa2dd5bc65eedc7854845b3209d568_cgraph.map  (+560 more)
.github/workflows/: build.yml
autd3-freq-shift-fpga.srcs/constrs_1/new/: top.xdc
autd3-freq-shift-fpga.srcs/sim_1/new/: sim_pwm_generator.sv  sim_transducer.sv
autd3-freq-shift-fpga.srcs/sources_1/ip/config_bram/: config_bram.xci
autd3-freq-shift-fpga.srcs/sources_1/ip/lpf_40k_500/: lpf_40k_500.xci
autd3-freq-shift-fpga.srcs/sources_1/ip/tr_bram/: tr_bram.xci
autd3-freq-shift-fpga.srcs/sources_1/ip/ultrasound_cnt_clk_gen/: ultrasound_cnt_clk_gen.xci
autd3-freq-shift-fpga.srcs/sources_1/new/: pwm_generator.sv  top.sv
autd3-slim-fpga.srcs/constrs_1/new/: top.xdc
autd3-slim-fpga.srcs/sim_1/new/: sim_transducer.sv
autd3-slim-fpga.srcs/sources_1/ip/blk_mem/: blk_mem.xci
autd3-slim-fpga.srcs/sources_1/ip/clk_lpf_wiz/: clk_lpf_wiz.xci
autd3-slim-fpga.srcs/sources_1/ip/config_bram/: config_bram.xci
autd3-slim-fpga.srcs/sources_1/ip/lpf_40k_500/: lpf_40k_500.xci
autd3-slim-fpga.srcs/sources_1/ip/mod_bram/: mod_bram.xci
autd3-slim-fpga.srcs/sources_1/ip/tr_bram/: tr_bram.xci
autd3-slim-fpga.srcs/sources_1/ip/ultrasound_cnt_clk_gen/: ultrasound_cnt_clk_gen.xci
autd3-slim-fpga.srcs/sources_1/new/: cvt_uid.vh  pwm_generator.sv  silent_lpf.sv  top.sv  transducer.sv
client/: CMakeLists.txt  README.md  build.ps1
client/examples/: CMakeLists.txt  runner.hpp  soem.cpp  twincat.cpp
client/examples/examples/: simple.hpp
client/include/: autd3-freq-shift.hpp  autd3.hpp  autd_types.hpp  consts.hpp  controller.hpp  device.hpp  ec_config.hpp  firmware_version.hpp  gain.hpp  linalg.hpp  link.hpp  modulation.hpp  result.hpp
client/include/autd3-freq-shift/: controller.hpp
client/include/autd3-freq-shift/core/: exception.hpp  geometry.hpp  link.hpp  logic.hpp
client/include/autd3-freq-shift/core/osal_timer/win32/: timer.hpp
client/include/linalg/: helper.hpp  matrix.hpp  quaternion.hpp
client/lib/: autd_logic.cpp  autd_logic.hpp
client/lib/link/soem/: CMakeLists.txt  autdsoem.cpp  autdsoem.hpp
client/link/soem/: CMakeLists.txt
client/link/soem/include/: soemlink.hpp
client/link/soem/src/: autdsoem.cpp  autdsoem.hpp  ec_config.hpp  soemlink.cpp
client/link/twincat/: CMakeLists.txt
client/link/twincat/include/: twincat.cpp  twincat.hpp  twincatlink.hpp
client/link/twincat/src/: twincatlink.cpp
client/osal_timer/: timer.hpp
client/osal_timer/win32/: timer.cpp
cpu/: LICENSE
cpu/inc/: app.h
cpu/src/: app.c
fpga/: .gitignore  autd3-freq-shift-fpga.xpr  clear.ps1
fpga/autd3-freq-shift-fpga.srcs/sources_1/ip/ultrasound_cnt_clk_gen/: ultrasound_cnt_clk_gen.xci
fpga/autd3-freq-shift-fpga.srcs/sources_1/new/: top.sv
inc/: utils.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+67 more)
soft/: .gitmodules
soft/.github/actions/cmake-doxygen-actions/: entrypoint.sh
soft/.github/workflows/: build.yml
soft/client/doc/: main_page.md
soft/client/examples/: soem.cpp
soft/client/include/autd3-freq-shift/core/: gain.hpp  geometry.hpp  hardware_defined.hpp  utils.hpp
soft/client/include/autd3-freq-shift/link/: soem.hpp
soft/client/lib/link/soem/: autdsoem.cpp  soem.cpp
src/: app.c
